@@ -1,2 +1,1 @@
 require File.dirname(__FILE__) + '/../lib/sunlight'
-include Sunlight
